# workshop03_Construindo_um_dw_do_zero_lucianogalvao

./: .env.example  .gitignore  products.csv  pyproject.toml
back-end/fake-api/: create_faker.py  start.py
backend/: start.py
backend/contracts/: schema.py
backend/datasource/: api.py
backend/drive/: client.py
backend/drive/dataapi/: api_response_compra_2024-02-14T23:11:10.parquet
backend/fakeapi/: create_faker.py  products.csv  start.py
frontend/: main.py
frontend/contract/: catalogo.py
frontend/datasource/: csv.py
frontend/drive/: client.py
