[tool.poetry]
name = "workshop03-construindo-um-dw-do-zero-lucianogalvao"
version = "0.1.0"
description = "Workshop3 - Construindo_um_dw_do_zero"
authors = ["keitarods <keitarojp@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
fastapi = {extras = ["all"], version = "^0.109.2"}
faker = "^23.1.0"
pandas = "^2.2.0"
faker-commerce = "^1.0.3"
requests = "^2.31.0"
pyarrow = "^15.0.0"
google-api-python-client = "^2.117.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
